tests/ui/suggestions/issue-105494.stderr
error[E0308]: mismatched types
  --> $DIR/issue-105494.rs:2:19
   |
LL |     let _v: i32 = (1 as i32).to_string();
   |             ---   ^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `String`
   |             |
   |             expected due to this
   |
help: try removing the method call
   |
LL -     let _v: i32 = (1 as i32).to_string();
LL +     let _v: i32 = (1 as i32);
   |

error[E0308]: mismatched types
  --> $DIR/issue-105494.rs:5:19
   |
LL |     let _v: i32 = (1 as i128).to_string();
   |             ---   ^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `String`
   |             |
   |             expected due to this

error[E0308]: mismatched types
  --> $DIR/issue-105494.rs:7:20
   |
LL |     let _v: &str = "foo".to_string();
   |             ----   ^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |             |
   |             expected due to this
   |
help: try removing the method call
   |
LL -     let _v: &str = "foo".to_string();
LL +     let _v: &str = "foo";
   |

error[E0308]: mismatched types
  --> $DIR/issue-105494.rs:14:12
   |
LL |     let mut path: String = "/usr".to_string();
   |                   ------ expected due to this type
...
LL |     path = format!("{}/{}", path, folder).as_str();
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `&str`
   |
help: try removing the method call
   |
LL -     path = format!("{}/{}", path, folder).as_str();
LL +     path = format!("{}/{}", path, folder);
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
